# ipSAE_batch

./: .gitignore  LICENSE  README.md  ipSAE_batch_colab.ipynb  pyproject.toml
ipsae_batch/: __init__.py  __main__.py  cli.py
ipsae_batch/core/: __init__.py  parallel_processing.py  residue_selection.py  scoring.py
ipsae_batch/data_readers/: __init__.py  alphafold3.py  auto_detect.py  base.py  boltz2.py  chai1.py  colabfold.py  intellifold.py  openfold3.py  protenix.py
ipsae_batch/extractors/: __init__.py  clustering.py  contacts.py  pae.py  pde.py  pmc.py  ptm.py
ipsae_batch/graphics/: __init__.py  batch_comparison.py  config.py  matrix_plot.py  pdf_export.py  ribbon_plot.py
ipsae_batch/output_writers/: __init__.py  csv_writer.py
